# wemake-django-template

./: .gitignore  README.md  pyproject.toml
{{cookiecutter.project_name}}/: Pipfile  README.md  docker-compose.yml  pyproject.toml  setup.cfg
{{cookiecutter.project_name}}/config/: .env.template
{{cookiecutter.project_name}}/docker/django/: Dockerfile  gunicorn.sh
{{cookiecutter.project_name}}/docker/nginx/: project.conf
{{cookiecutter.project_name}}/server/: urls.py
{{cookiecutter.project_name}}/server/api/: __init__.py  exceptions.py
{{cookiecutter.project_name}}/server/api/v1/: apps.py  urls.py
{{cookiecutter.project_name}}/server/apps/: __init__.py
{{cookiecutter.project_name}}/server/apps/common/: __init__.py  apps.py  common.py  filters.py
{{cookiecutter.project_name}}/server/apps/common/management/commands/: fixture.py
{{cookiecutter.project_name}}/server/settings/: __init__.py
{{cookiecutter.project_name}}/server/settings/components/: apps.py  common.py  database.py  drf.py  internationalization.py  static.py  swagger.py  templates.py
{{cookiecutter.project_name}}/server/settings/environments/: development.py
