[tool.poetry]
name = "wemake-django-template"
version = "0.1.0"
description = "Bleeding edge django template focused on code quality and security."
authors = ["Melis <melis.zhoroev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
django = "*"
django-split-settings = "*"
djangorestframework = "==3.8.2"
drf_yasg = "*"
drf-yasg = { version = "*", extras = ['validation'] }
djangorestframework-jwt = "==1.11.0"
psycopg2 = "*"
gunicorn = "*"
python-decouple = "*"
dump-env = "*"
bcrypt = "*"

[tool.poetry.dev-dependencies]
django-debug-toolbar = "*"
django-querycount = "*"
nplusone = "*"
"pep8-naming" = "*"
"flake8-commas" = "*"
"flake8-quotes" = "*"
"flake8-blind-except" = "*"
"flake8-comprehensions" = "*"
"flake8-pep3101" = "*"
"flake8-docstrings" = "*"
"flake8-coding" = "*"
"flake8-module-name" = "*"
"flake8-pytest" = "*"
"flake8-string-format" = "*"
"flake8-debugger" = "*"
"flake8-print" = "*"
"flake8-builtins" = "*"
"flake8-bugbear" = "*"
pytest = "*"
"pytest-flake8" = "*"
pytest-isort = "*"
pytest-django = "*"
pytest-cov = "*"
pytest-xdist = "*"
pytest-randomly = "*"
pytest-deadfixtures = "*"
pytest-picked = "*"
xenon = "*"
radon = "*"
mypy = "*"
pylint = "*"
ipython = "*"
"doc8" = "*"
bandit = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
